Fix desktop sidebar wrapping and add Gemfile for local dev

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -11,15 +11,35 @@
 @media only screen and (max-width: 959px) {
 	#logo {
 		font-size: 21px;
-		margin-bottom: 15px; }
+		margin-bottom: 15px;
+	}
+
 	nav .button {
-		padding: 9px 20px 11px; }
+		padding: 9px 20px 11px;
+	}
+}
+
+/* Large Desktop (VNExpress style) */
+@media only screen and (min-width: 1200px) {
+	.container {
+		width: 1200px;
+	}
+
+	.container .four.columns {
+		width: 280px;
+	}
+
+	.container .eleven.columns {
+		width: 830px;
+	}
 }
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	nav {
-		width: 160px; }
+		width: 160px;
+	}
+
 	.sidebar h2 {
 		font-size: 18px;
 	}
@@ -31,10 +51,20 @@
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
-	header h1 { font-size: 34px; line-height: 37px; }
-	nav { position: relative; }
+	header h1 {
+		font-size: 34px;
+		line-height: 37px;
+	}
+
+	nav {
+		position: relative;
+	}
+
 	nav ul,
-	#logo { text-align: left; }
+	#logo {
+		text-align: left;
+	}
+
 	/* .sidebar {
 		display: none;
 	} */
